--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">@color/C1</color>
     <color name="colorPrimaryDark">@color/C1</color>
-    <color name="colorAccent">@color/C1</color>
+    <color name="colorAccent">#FF4081</color>
 
 
     <color name="C1">#2dbc6d</color>
