--- a/app/src/main/res/layout/web_activity.xml
+++ b/app/src/main/res/layout/web_activity.xml
@@ -54,12 +54,13 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/m15"
         android:clickable="true"
-        android:background="@color/C2"
         android:src="@mipmap/ic_heart"
+        app:backgroundTint="@color/C4"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|right|end" />
 
