--- a/gankarch/src/main/res/layout/activity_guide.xml
+++ b/gankarch/src/main/res/layout/activity_guide.xml
@@ -3,14 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="girl"
+            type="com.adam.gankarch.data.bean.GankEntity" />
+    </data>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/ivSplash"
+            imageUrl="@{girl.url}"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/transparent" />
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter" />
     </FrameLayout>
 </layout>
