--- a/gankarch/src/main/res/layout/activity_detail.xml
+++ b/gankarch/src/main/res/layout/activity_detail.xml
@@ -35,6 +35,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:title="@string/app_name"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
